# paperjam

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  justfile  pyproject.toml
crates/paperjam-async/: Cargo.toml
crates/paperjam-async/src/: convert.rs  document.rs  generic.rs  lib.rs  page.rs
crates/paperjam-cli/: Cargo.toml
crates/paperjam-cli/src/: cli.rs  document.rs  error.rs  main.rs  util.rs
crates/paperjam-cli/src/commands/: convert.rs  delete.rs  diff.rs  encrypt.rs  extract.rs  form.rs  info.rs  merge.rs  mod.rs  optimize.rs  pipeline.rs  redact.rs  render.rs  reorder.rs  rotate.rs  sanitize.rs  sign.rs  split.rs  stamp.rs  toc.rs  validate.rs  verify.rs  watermark.rs
crates/paperjam-convert/: Cargo.toml
crates/paperjam-convert/src/: convert.rs  detect.rs  error.rs  extract.rs  generate.rs  intermediate.rs  lib.rs
crates/paperjam-core/: Cargo.toml
crates/paperjam-core/benches/: table_extraction.rs
crates/paperjam-core/data/: sRGB.icc
crates/paperjam-core/src/: document.rs  error.rs  lib.rs  parallel.rs
crates/paperjam-core/src/annotations/: mod.rs
crates/paperjam-core/src/bookmarks/: mod.rs
crates/paperjam-core/src/conversion/: actions.rs  mod.rs  output_intent.rs  transparency.rs  xmp.rs
crates/paperjam-core/src/diff/: mod.rs  visual.rs
crates/paperjam-core/src/encryption/: aes128.rs  aes256.rs  key.rs  mod.rs  rc4.rs
crates/paperjam-core/src/forms/: appearance.rs  create.rs  mod.rs  traverse.rs  types.rs
crates/paperjam-core/src/image/: mod.rs
crates/paperjam-core/src/io/: reader.rs  writer.rs
crates/paperjam-core/src/layout/: columns.rs  mod.rs  reading_order.rs  regions.rs
crates/paperjam-core/src/manipulation/: delete.rs  insert.rs  merge.rs  mod.rs  reorder.rs  rotate.rs  split.rs  utils.rs
crates/paperjam-core/src/markdown/: mod.rs
crates/paperjam-core/src/metadata/: mod.rs  xmp.rs
crates/paperjam-core/src/optimization/: mod.rs
crates/paperjam-core/src/page/: content.rs  mod.rs  resources.rs
crates/paperjam-core/src/redact/: encoder.rs  filter.rs  mod.rs
crates/paperjam-core/src/render/: engine.rs  mod.rs  types.rs
crates/paperjam-core/src/sanitize/: mod.rs
crates/paperjam-core/src/signature/: cert.rs  extract.rs  mod.rs  pkcs7.rs  sign.rs  tsa.rs  types.rs  verify.rs
crates/paperjam-core/src/stamp/: mod.rs
crates/paperjam-core/src/structure/: mod.rs
crates/paperjam-core/src/table/: detector.rs  grid.rs  lattice.rs  mod.rs  stream.rs  types.rs
crates/paperjam-core/src/text/: cmap.rs  encoding.rs  font.rs  layout.rs  mod.rs  operators.rs
crates/paperjam-core/src/toc/: mod.rs
crates/paperjam-core/src/validation/: mod.rs  pdf_a.rs  pdf_ua.rs
crates/paperjam-core/src/watermark/: mod.rs
crates/paperjam-docx/: Cargo.toml
crates/paperjam-docx/src/: document.rs  error.rs  image.rs  lib.rs  markdown.rs  metadata.rs  structure.rs  table.rs  text.rs
crates/paperjam-epub/: Cargo.toml
crates/paperjam-epub/src/: document.rs  error.rs  image.rs  lib.rs  markdown.rs  metadata.rs  parser.rs  safe_read.rs  structure.rs  table.rs  text.rs  toc.rs  writer.rs
crates/paperjam-html/: Cargo.toml
crates/paperjam-html/src/: document.rs  error.rs  image.rs  lib.rs  markdown.rs  metadata.rs  structure.rs  table.rs  text.rs  writer.rs
crates/paperjam-mcp/: Cargo.toml
crates/paperjam-mcp/src/: error.rs  lib.rs  main.rs  session.rs
crates/paperjam-model/: Cargo.toml
crates/paperjam-model/src/: annotations.rs  bookmarks.rs  conversion.rs  diff.rs  document.rs  encryption.rs  format.rs  forms.rs  image.rs  layout.rs  lib.rs  manipulation.rs  markdown.rs  metadata.rs  optimization.rs  redact.rs  render.rs  sanitize.rs  signature.rs  stamp.rs  structure.rs  table.rs  text.rs  toc.rs  validation.rs  visual_diff.rs  watermark.rs  zip_safety.rs
crates/paperjam-pipeline/: Cargo.toml
crates/paperjam-pipeline/src/: builder.rs  context.rs  definition.rs  engine.rs  error.rs  executor.rs  lib.rs  progress.rs  result.rs  step.rs
crates/paperjam-pptx/: Cargo.toml
crates/paperjam-pptx/src/: document.rs  error.rs  lib.rs  markdown.rs  metadata.rs  parser.rs  safe_read.rs  structure.rs  table.rs  text.rs
crates/paperjam-py/: Cargo.toml
crates/paperjam-py/src/: any_document.rs  async_ops.rs  convert_ops.rs  document.rs  errors.rs  lib.rs  page.rs  pipeline_ops.rs
crates/paperjam-py/src/convert/: forms.rs  layout.rs  mod.rs  signature.rs  table.rs
crates/paperjam-py/src/ops/: annotate.rs  bookmarks.rs  conversion.rs  diff.rs  forms.rs  mod.rs  render.rs  security.rs  signature.rs  toc.rs  transform.rs  validation.rs  visual_diff.rs  watermark.rs
crates/paperjam-studio/: Cargo.toml
crates/paperjam-studio/src/: main.rs
crates/paperjam-studio/static/css/: tokens.css
crates/paperjam-studio/static/js/lib/: store.js  wasm-bridge.js
crates/paperjam-studio/web/: index.html  package-lock.json  package.json
crates/paperjam-studio/web/src/: App.tsx
crates/paperjam-studio/web/src/components/convert/: ConversionResult.tsx  FormatSelector.tsx
crates/paperjam-studio/web/src/components/documents/: DocumentCard.tsx  DocumentList.tsx  DocumentViewer.tsx
crates/paperjam-studio/web/src/components/ui/: Button.tsx  (+5 more)
crates/paperjam-studio/web/src/lib/: format-utils.ts  store.ts  types.ts  wasm-bridge.ts
crates/paperjam-studio/web/src/pages/: ConvertPage.tsx  DocumentsPage.tsx  PipelinePage.tsx
crates/paperjam-studio/web/src/styles/: global.css
crates/paperjam-wasm/: Cargo.toml
crates/paperjam-wasm/src/: lib.rs
crates/paperjam-xlsx/: Cargo.toml
crates/paperjam-xlsx/src/: document.rs  error.rs  lib.rs  markdown.rs  metadata.rs  reader.rs  structure.rs  table.rs  text.rs  writer.rs
mcp-server/: README.md  pyproject.toml
mcp-server/src/: __init__.py  __main__.py  prompts.py  resources.py  serializers.py  server.py  session.py
mcp-server/src/tools/: __init__.py  annotation.py  comparison.py  conversion.py  document.py  extraction.py  forms.py  manipulation.py  metadata.py  page.py  pipeline.py  render.py  security.py  signatures.py  validation.py
(+245 files in other folders)
