[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "paperjam"
version = "0.1.0"
description = "Fast PDF processing powered by Rust"
license = { text = "MIT OR Apache-2.0" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
keywords = ["pdf", "text-extraction", "table-extraction", "rust"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
dev = [
    "pytest>=8.0",
    "pytest-benchmark>=4.0",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "mypy>=1.8",
    "ruff>=0.3",
]

[tool.maturin]
python-source = "python"
module-name = "paperjam._paperjam"
features = ["pyo3/extension-module"]
manifest-path = "crates/paperjam-python/Cargo.toml"
include = [
    { path = "python/paperjam/libpdfium.so", format = "wheel" },
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]
