[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "paperjam"
version = "0.1.3"
description = "Fast PDF processing powered by Rust"
license = { text = "MIT" }
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing",
    "Typing :: Typed",
]
keywords = ["pdf", "text-extraction", "table-extraction", "rust"]

[project.optional-dependencies]
pandas = ["pandas>=2.0"]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "myst-parser>=2.0",
    "sphinx-copybutton>=0.5",
    "sphinxcontrib-mermaid>=2.0",
    "sphinx-autobuild>=2024.0.0",
]
dev = [
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-benchmark>=4.0",
    "pypdf>=4.0",
    "pdfplumber>=0.10",
    "mypy>=1.8",
    "ruff>=0.3",
    "reportlab>=4.0,<4.2",
    "pandas>=2.0",
]

[tool.maturin]
python-source = "py_src"
module-name = "paperjam._paperjam"
features = ["pyo3/extension-module"]
manifest-path = "crates/paperjam-py/Cargo.toml"
include = [
    { path = "py_src/paperjam/libpdfium.so", format = "wheel" },
    { path = "LICENSE", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["tests/python"]
markers = [
    "accuracy: table extraction accuracy harness (run with -m accuracy)",
]

[tool.ruff]
target-version = "py312"
line-length = 150

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH", "RUF"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
