[package]
name = "paperjam-async"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Async wrappers for paperjam operations via tokio::spawn_blocking"

[dependencies]
paperjam-core = { path = "../paperjam-core", features = ["render", "signatures", "validation"] }
paperjam-model = { path = "../paperjam-model" }
paperjam-convert = { path = "../paperjam-convert", optional = true }
tokio = { workspace = true }

[features]
default = ["convert"]
convert = ["dep:paperjam-convert"]
