[package]
name = "paperjam-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Command-line document processing tool powered by paperjam"

[[bin]]
name = "pj"
path = "src/main.rs"

[dependencies]
paperjam-core = { path = "../paperjam-core", features = ["parallel", "signatures", "ltv", "validation"] }
paperjam-model = { path = "../paperjam-model" }
paperjam-docx = { path = "../paperjam-docx" }
paperjam-xlsx = { path = "../paperjam-xlsx" }
paperjam-pptx = { path = "../paperjam-pptx" }
paperjam-convert = { path = "../paperjam-convert" }
paperjam-pipeline = { path = "../paperjam-pipeline" }
paperjam-html = { path = "../paperjam-html" }
paperjam-epub = { path = "../paperjam-epub" }
clap = { version = "4", features = ["derive", "env", "wrap_help"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[features]
default = []
render = ["paperjam-core/render"]
