[package]
name = "paperjam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure Rust PDF engine — parsing, text extraction, table detection, manipulation"

[dependencies]
lopdf = "0.34"
regex = "1"
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
# Note: pinned to 0.34 for now; 0.39 changes API significantly.
# We work around any missing features at the wrapper level.
thiserror = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }
encoding_rs = { workspace = true }
rayon = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
pdfium-render = { workspace = true, optional = true }
image = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
cms = { workspace = true, optional = true }
der = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }
spki = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
pkcs8 = { workspace = true, optional = true }
roxmltree = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
mmap = ["dep:memmap2"]
render = ["dep:pdfium-render", "dep:image"]
signatures = ["dep:x509-parser", "dep:cms", "dep:der", "dep:sha2", "dep:sha1", "dep:rsa", "dep:p256", "dep:pkcs8", "dep:spki"]
validation = ["dep:roxmltree"]
