[package]
name = "paperjam-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Pure Rust PDF engine — parsing, text extraction, table detection, manipulation"

[dependencies]
paperjam-model = { path = "../paperjam-model" }
lopdf = "0.34"
regex = "1"
# Pinned to 0.10 so the whole RustCrypto stack (digest, block-buffer,
# sha2, sha1, rsa, p256, hmac, ecdsa, elliptic-curve, pkcs8) resolves
# to a single major version. Bumping to 0.11 drags a duplicate
# `block-buffer`/`digest` tree that bloats build time and binary size.
md-5 = "0.10"
aes = "0.8"
cbc = "0.1"
rand = "0.8"
# Note: pinned to 0.34 for now; 0.39 changes API significantly.
# We work around any missing features at the wrapper level.
thiserror = { workspace = true }
log = { workspace = true }
flate2 = { workspace = true }
encoding_rs = { workspace = true }
rayon = { workspace = true, optional = true }
memmap2 = { workspace = true, optional = true }
pdfium-render = { workspace = true, optional = true }
image = { workspace = true, optional = true }
x509-parser = { workspace = true, optional = true }
cms = { workspace = true, optional = true }
der = { workspace = true, optional = true }
sha2 = { workspace = true }
spki = { workspace = true, optional = true }
sha1 = { workspace = true, optional = true }
rsa = { workspace = true, optional = true }
p256 = { workspace = true, optional = true }
pkcs8 = { workspace = true, optional = true }
roxmltree = { workspace = true, optional = true }
ureq = { workspace = true, optional = true }
rustls = { workspace = true, optional = true }

[features]
default = ["parallel"]
parallel = ["dep:rayon"]
mmap = ["dep:memmap2"]
render = ["dep:pdfium-render", "dep:image"]
signatures = ["dep:x509-parser", "dep:cms", "dep:der", "dep:sha1", "dep:rsa", "dep:p256", "dep:pkcs8", "dep:spki"]
ltv = ["signatures", "dep:ureq", "dep:rustls"]
validation = ["dep:roxmltree"]

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "table_extraction"
harness = false
