[package]
name = "paperjam-mcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "MCP server for AI-native document processing with paperjam"

[[bin]]
name = "paperjam-mcp"
path = "src/main.rs"

[dependencies]
paperjam-core = { path = "../paperjam-core" }
paperjam-model = { path = "../paperjam-model" }
paperjam-convert = { path = "../paperjam-convert" }
paperjam-pipeline = { path = "../paperjam-pipeline" }
rmcp = { version = "1.3", features = ["server", "transport-io"] }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
thiserror = { workspace = true }
