[package]
name = "paperjam-pipeline"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Declarative document processing workflows for the paperjam ecosystem"

[dependencies]
paperjam-model = { path = "../paperjam-model" }
paperjam-core = { path = "../paperjam-core" }
paperjam-convert = { path = "../paperjam-convert" }
rayon = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
glob = "0.3"
thiserror = { workspace = true }
