[package]
name = "paperjam-py"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Python bindings for paperjam via PyO3"

[lib]
name = "_paperjam"
crate-type = ["cdylib"]

[dependencies]
paperjam-core = { path = "../paperjam-core", features = ["render", "signatures", "ltv", "validation"] }
pyo3 = { version = "0.23", features = ["extension-module", "abi3-py312"] }

# Async support (feature-gated, default on)
paperjam-async = { path = "../paperjam-async", optional = true }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"], optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["async"]
async = ["dep:paperjam-async", "dep:pyo3-async-runtimes", "dep:tokio"]
