[package]
name = "paperjam-studio"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "WASM-powered web UI for visual document processing with paperjam"

[[bin]]
name = "paperjam-studio"
path = "src/main.rs"

[dependencies]
axum = "0.8"
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs", "cors", "set-header"] }
clap = { version = "4", features = ["derive"] }
