[package]
name = "paperjam-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for paperjam"

[lib]
crate-type = ["cdylib"]

[dependencies]
paperjam-core = { path = "../paperjam-core", default-features = false, features = ["signatures", "validation"] }
paperjam-model = { path = "../paperjam-model" }
paperjam-convert = { path = "../paperjam-convert", default-features = false }
paperjam-docx = { path = "../paperjam-docx", optional = true }
paperjam-xlsx = { path = "../paperjam-xlsx", optional = true }
paperjam-pptx = { path = "../paperjam-pptx", optional = true }
paperjam-html = { path = "../paperjam-html", optional = true }
paperjam-epub = { path = "../paperjam-epub", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["pdf", "docx", "xlsx"]
pdf = ["paperjam-convert/pdf"]
docx = ["dep:paperjam-docx", "paperjam-convert/docx"]
xlsx = ["dep:paperjam-xlsx", "paperjam-convert/xlsx"]
pptx = ["dep:paperjam-pptx", "paperjam-convert/pptx"]
html = ["dep:paperjam-html", "paperjam-convert/html"]
epub = ["dep:paperjam-epub", "paperjam-convert/epub"]
all-formats = ["pdf", "docx", "xlsx", "pptx", "html", "epub"]
