[package]
name = "paperjam-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "WebAssembly bindings for paperjam"

[lib]
crate-type = ["cdylib"]

[dependencies]
paperjam-core = { path = "../paperjam-core", default-features = false, features = ["signatures", "validation"] }
paperjam-model = { path = "../paperjam-model" }
paperjam-convert = { path = "../paperjam-convert", default-features = false }
paperjam-docx = { path = "../paperjam-docx", optional = true }
paperjam-xlsx = { path = "../paperjam-xlsx", optional = true }
paperjam-pptx = { path = "../paperjam-pptx", optional = true }
paperjam-html = { path = "../paperjam-html", optional = true }
paperjam-epub = { path = "../paperjam-epub", optional = true }
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde-wasm-bindgen = "0.6"
js-sys = "0.3"
getrandom_v02 = { package = "getrandom", version = "0.2", features = ["js"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[features]
default = ["pdf", "docx", "xlsx"]
pdf = ["paperjam-convert/pdf"]
docx = ["dep:paperjam-docx", "paperjam-convert/docx"]
xlsx = ["dep:paperjam-xlsx", "paperjam-convert/xlsx"]
pptx = ["dep:paperjam-pptx", "paperjam-convert/pptx"]
html = ["dep:paperjam-html", "paperjam-convert/html"]
epub = ["dep:paperjam-epub", "paperjam-convert/epub"]
all-formats = ["pdf", "docx", "xlsx", "pptx", "html", "epub"]

# wasm-pack reads this block to decide how to invoke wasm-opt on the
# release bundle. Modern rustc (1.82+) emits several wasm 2.0 features
# in its default output — we enable the same set here so wasm-opt can
# validate and optimise the module. The list mirrors the feature set
# rustc enables by default on wasm32-unknown-unknown.
[package.metadata.wasm-pack.profile.release]
wasm-opt = [
    "-O",
    "--enable-bulk-memory",
    "--enable-sign-ext",
    "--enable-nontrapping-float-to-int",
    "--enable-mutable-globals",
    "--enable-reference-types",
    "--enable-multivalue",
]
