[package]
name = "paperjam-xlsx"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "XLSX spreadsheet processing for the paperjam ecosystem"

[dependencies]
paperjam-model = { path = "../paperjam-model" }
calamine = { version = "0.26", default-features = false }
rust_xlsxwriter = { version = "0.82", default-features = false, features = ["zlib"] }
thiserror = { workspace = true }
